--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -2,11 +2,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap');
 :root {
   --primary: #fe2c55;
+  --default-layout-header-height: 60px;
+  --defaul-layout-width: 1150px;
 }
 * {
+  margin: 0;
+  padding: 0;
 }
 html {
   font-size: 62.5%;
+  box-sizing: border-box;
 }
 
 body {
