--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -1,21 +1,28 @@
 @import 'normalize.css';
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap');
+
 :root {
   --primary: #fe2c55;
   --default-layout-header-height: 60px;
   --defaul-layout-width: 1150px;
+  --black: #000;
+  --text-color: #333;
 }
+
 * {
   margin: 0;
   padding: 0;
+
+  box-sizing: border-box;
 }
+
 html {
   font-size: 62.5%;
-  box-sizing: border-box;
 }
 
 body {
   font-family: 'Roboto', 'sans-serif';
   font-size: 1.6rem;
   line-height: 1.5;
+
 }
