--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -1,13 +1,107 @@
 .wrapper {
+  --search-border-radius: 92px;
+  --search-height: 46px;
+  --search-top-spacer: 9px;
+  --search-button-width: 52px;
+
   height: var(--default-layout-header-height);
   box-shadow: 0px 1px 1px rgb(0 0 0 / 12%);
   display: flex;
   justify-content: center;
   width: 100%;
 }
-.inner{
+
+.inner {
   height: 100%;
   width: var(--defaul-layout-width);
-  background-color: #eee;
-  
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.logo {}
+
+.search {
+  padding-left: 16px;
+  width: 346px;
+  height: var(--search-height);
+  background-color: #f1f1f2;
+  border-radius: var(--search-border-radius);
+  display: flex;
+  border: 1.5px solid transparent;
+  position: relative;
+
+  input {
+    color: var(--black);
+    height: 100%;
+    font-size: 1.6rem;
+    outline: none;
+    background-color: transparent;
+    border: none;
+    flex: 1;
+    caret-color: var(--primary);
+  }
+
+  input:not(:placeholder-shown)~.search-btn {
+    color: #4c4e57;
+  }
+
+  &:focus-within {
+    border-color: rgba(22, 24, 35, 0.2);
+  }
+
+
+}
+
+.clear,
+.spinner {
+  position: absolute;
+  right: calc(var(--search-button-width) + 14px);
+  top: 50%;
+  transform: translateY(-50%);
+  color: #a6a7ac;
+}
+
+.search-btn {
+  width: var(--search-button-width);
+  height: 100%;
+  border: none;
+  outline: none;
+  border-top-right-radius: var(--search-border-radius);
+  border-bottom-right-radius: var(--search-border-radius);
+  font-size: 1.8rem;
+  color: rgba(22, 24, 35, 0.34);
+  position: relative;
+
+  &:hover {
+    background-color: #e9e9eb;
+    cursor: pointer;
+  }
+
+  &::after {
+    content: "";
+    width: 1px;
+    top: 9px;
+    right: var(--search-button-width);
+    position: absolute;
+    height: calc(var(--search-height) - var(--search-top-spacer) * 2);
+    background-color: rgba(22, 24, 35, 0.12);
+  }
+
+  &:active {
+    background-color: #e4e4e6;
+  }
+
+}
+
+button,
+input,
+[tabindex] {
+  outline: none;
+  border: none;
+}
+
+a[href] {
+  color: var(--text-color);
+  text-decoration: none;
 }
